<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
  <string name="ballot_logo_description">Ballot logo image</string>
  <string name="upcoming_elections">Upcoming elections</string>
  <string name="representative_search">Representative Search</string>
  <string name="find_my_representatives">Find my representatives</string>
  <string name="my_representatives">My representatives</string>
  <string name="use_my_location">Use my location</string>
  <string name="representative_pic_description">Representative photo</string>
  <string name="www_logo_description">web icon</string>
  <string name="twitter_logo_description">twitter icon\n</string>
  <string name="facebook_logo_description">Facebook icon</string>
  <string name="saved_elections">Saved elections</string>
  <string name="election_information">Election Information</string>
  <string name="voting_locations">Voting Locations</string>
  <string name="ballot_information">Ballot Information</string>
  <string name="correspondence_address">Correspondence Address:</string>
  <string name="address_line_1_hint">Address Line 1</string>
  <string name="address_line_2_hint">Address Line 2</string>
  <string name="city_hint">City</string>
  <string name="zip_hint">Zip</string>
  <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
  <string name="settings">Settings</string>
  <string name="location_error">Error when getting location</string>
  <string name="location_required_error">Location services must be enabled to use the app</string>
  <string name="follow_election">Follow election</string>
  <string name="unfollow_election">Unfollow election</string>
  <string name="no_results_found">No results found</string>

</resources>
