<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
           android:layout_height="0dp"
          android:layout_width="wrap_content"
          android:src="@drawable/ballot_logo"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toTopOf="@+id/upcoming_button"
          android:contentDescription="@string/ballot_logo_description" />

        <Button
          android:id="@+id/upcoming_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/medium_padding"
          android:layout_marginVertical="@dimen/default_padding"
          android:theme="@style/Button"
          android:text="@string/upcoming_elections"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toTopOf="@+id/representative_button"
          />

        <Button
          android:id="@+id/representative_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/medium_padding"
          android:layout_marginBottom="@dimen/medium_padding"
          android:theme="@style/Button"
          android:text="@string/find_my_representatives"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>