<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>
        <variable
          name="viewModel"
          type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:id="@+id/coordinator"
      android:layout_height="match_parent"
      android:layout_width="match_parent"
      android:fitsSystemWindows="false"
      android:paddingHorizontal="@dimen/medium_padding">

<!--        https://developer.android.com/reference/com/google/android/material/appbar/AppBarLayout-->
        <com.google.android.material.appbar.AppBarLayout
          android:id="@+id/appbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/transparent"
          app:elevation="0dp">

            <androidx.constraintlayout.motion.widget.MotionLayout
              android:id="@+id/motionLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:minHeight="50dp"
              app:layout_scrollFlags="scroll|enterAlways"
              app:layoutDescription="@xml/fragment_representative_scene">

                <androidx.constraintlayout.widget.ConstraintLayout
                  android:id="@+id/form"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/search_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/representative_search"
                    android:textStyle="bold"
                    android:textColor="@color/gray50"
                    android:textSize="@dimen/title_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/address_line_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="textPostalAddress"
                    android:hint="@string/address_line_1_hint"
                    android:text="@={viewModel._addressLine1}"
                    android:layout_marginTop="@dimen/small_padding"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_title" />

                <EditText
                    android:id="@+id/address_line_2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:autofillHints=""
                    android:inputType="textPostalAddress"
                    android:hint="@string/address_line_2_hint"
                    android:text="@={viewModel._addressLine2}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_1" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="textPostalAddress"
                    android:hint="@string/city_hint"
                    android:text="@={viewModel._city}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/state"
                    app:layout_constraintTop_toBottomOf="@id/address_line_2" />

                <Spinner
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autofillHints=""
                    android:inputType="textPostalAddress"
                    app:stateValue="@{viewModel._state}"
                    app:layout_constraintStart_toEndOf="@id/city"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/city"
                    app:layout_constraintBottom_toBottomOf="@id/city"/>

                <EditText
                    android:id="@+id/zip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="number"
                    android:maxLength="5"
                    android:hint="@string/zip_hint"
                    android:text="@={viewModel._zip}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/city"
                    app:layout_constraintTop_toBottomOf="@id/city" />

                <Button
                    android:id="@+id/button_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/find_my_representatives"
                    android:theme="@style/Button"
                    app:layout_constraintTop_toBottomOf="@id/zip" />

                <Button
                    android:id="@+id/button_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_my_location"
                    android:theme="@style/Button"
                    android:layout_marginVertical="@dimen/default_padding"
                    app:layout_constraintTop_toBottomOf="@id/button_search" />

                <TextView
                  android:id="@+id/representative_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/my_representatives"
                  android:textStyle="bold"
                  android:textColor="@color/gray50"
                  android:textSize="@dimen/title_size"
                  android:layout_marginTop="@dimen/medium_padding"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/button_location" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.motion.widget.MotionLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
          android:id="@+id/scroll_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/representatives_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>