<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.politicalpreparedness.MainActivity">

    <TextView
      android:id="@+id/election_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/medium_padding"
      android:text="@{viewModel.voterInfo.election.electionDay.toString()}"
      android:textStyle="italic"
      app:layout_constraintTop_toBottomOf="@id/election_name"
      app:layout_constraintStart_toStartOf="parent"
      tools:text="12 November 2055" />


    <TextView
      android:id="@+id/election_information"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/medium_padding"
      android:text="@string/election_information"
      android:textColor="@color/colorPrimaryDark"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/election_date"
      android:visibility="gone"
      tools:visibility="visible"/>

    <TextView
      android:id="@+id/voting_locations"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/medium_padding"
      android:text="@string/voting_locations"
      android:textColor="@color/colorPrimaryDark"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/election_information"
      android:visibility="gone"
      tools:visibility="visible"/>

    <TextView
      android:id="@+id/ballot_information"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/medium_padding"
      android:text="@string/ballot_information"
      android:textColor="@color/colorPrimaryDark"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/voting_locations"
      android:visibility="gone"
      tools:visibility="visible"/>

    <!-- TODO: Add click binding to open web URL -->
    <TextView
      android:id="@+id/state_correspondence_header"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/medium_padding"
      android:layout_marginTop="@dimen/medium_padding"
      android:text="@string/correspondence_address"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ballot_information"
      android:visibility="gone"
      tools:visibility="visible"/>

    <TextView
      android:id="@+id/address"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/medium_padding"
      android:layout_marginHorizontal="@dimen/medium_padding"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
      android:text="@{viewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()}"
      tools:text="Address, London, UK" />

    <!-- TODO: Add visual styling and content -->
    <androidx.appcompat.widget.Toolbar
      android:id="@+id/election_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/default_padding"
      android:singleLine="true"
      app:layout_constraintTop_toTopOf="parent"
      app:title="@{viewModel.voterInfo.election.name}"
      tools:title="Google Test Election (Future)"/>

    <Button
      android:id="@+id/follow_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/medium_padding"
      android:layout_marginBottom="@dimen/medium_padding"
      android:background="@color/colorPrimaryDark"
      android:textColor="@color/white"
      android:text="@string/follow_election"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:visibility="gone"
      tools:visibility="visible"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <data>
    <variable
      name="viewModel"
      type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
  </data>
</layout>