<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
          name="representative"
          type="com.example.android.politicalpreparedness.representative.model.Representative" />

        <variable
          name="representativeCallback"
          type="com.example.android.politicalpreparedness.representative.adapter.RepresentativeClick" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="12dp"
      android:onClick="@{() -> representativeCallback.onClick(representative)}">

        <ImageView
          android:id="@+id/representative_photo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="@dimen/small_padding"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:src="@drawable/ic_profile"
          android:contentDescription="@string/representative_pic_description" />

        <TextView
          android:id="@+id/representative_role"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="@dimen/small_padding"
          android:text="@{representative.office.name}"
          android:textSize="18sp"
          app:layout_constraintStart_toEndOf="@+id/representative_photo"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toTopOf="@+id/representative_name"
          tools:text="President of the Unites States" />

        <TextView
          android:id="@+id/representative_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="@dimen/small_padding"
          android:text="@{representative.official.name}"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="@+id/representative_role"
          app:layout_constraintBottom_toTopOf="@+id/representative_party"
          tools:text="Donald J. Trump" />

        <TextView
          android:id="@+id/representative_party"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="@dimen/small_padding"
          android:textSize="12sp"
          android:text="@{representative.official.party}"
          app:layout_constraintStart_toStartOf="@+id/representative_role"
          app:layout_constraintBottom_toBottomOf="parent"
          tools:text="Republican Party" />

        <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/representative_role"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:orientation="horizontal">

            <ImageView
              android:id="@+id/www_icon"
              android:layout_width="@dimen/ic_size"
              android:layout_height="@dimen/ic_size"
              android:padding="@dimen/small_padding"
              android:src="@drawable/ic_www"
              android:contentDescription="@string/www_logo_description" />

            <ImageView
              android:id="@+id/facebook_icon"
              android:layout_width="@dimen/ic_size"
              android:layout_height="@dimen/ic_size"
              android:padding="@dimen/small_padding"
              android:src="@drawable/ic_facebook"
              android:contentDescription="@string/facebook_logo_description" />

            <ImageView
              android:id="@+id/twitter_icon"
              android:layout_width="@dimen/ic_size"
              android:layout_height="@dimen/ic_size"
              android:padding="@dimen/small_padding"
              android:src="@drawable/ic_twitter"
              android:contentDescription="@string/twitter_logo_description" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>